@@ -27,6 +27,7 @@ Changelog
  * Fix: Filter objects are cached to avoid a database hit every time an {% image %} tag is compiled
  * Fix: Moving or changing a site root page no longer causes URLs for subpages to change to 'None'
  * Fix: Eliminated raw SQL queries from wagtailcore / wagtailadmin, to ensure cross-database compatibility
+ * Fix: Snippets menu item is hidden for administrators if no snippet types are defined
 
 0.2 (11.03.2014)
 ~~~~~~~~~~~~~~~~
